Inizio solver non funzionante

--- a/sudoku.html
+++ b/sudoku.html
@@ -8,7 +8,7 @@
 	
 </head>
 <body>
-	
+
 	<h1>Sudoku</h1>
 
 	<div id="sudokuDiv"></div>
@@ -45,6 +45,7 @@
 
 				<input type="button" value="Check Sudoku" onclick="checkSudoku()"/>
 				<input type="button" value="Delete number" onclick="deleteCell()" />
+				<input type="button" value="Solve sudoku" onclick="solve()" />
 
 			</div>
 
